fixed admin job page to work on mobile

--- a/src/app/components/homePage/shared/eventPortal.less
+++ b/src/app/components/homePage/shared/eventPortal.less
@@ -86,7 +86,7 @@
       justify-content: flex-start;
       overflow: auto;
       width: 100%;
-      max-height: 70%;
+      max-height: 80%;
 
       button {
         flex-grow: 1;
@@ -297,14 +297,21 @@
 /*TABLET VIEW */
 @media only screen and (max-width: 830px){
 
+  .admin{
+    border-right: none;
+  }
+
     .event-portal .event-body {
-      flex-direction: column;
+      flex-direction: column-reverse;
       height: 100%;
   }
 
   .event-portal .jobs {
-    width: 90%;
+    //width: 90%;
 }
+  .event-portal button{
+    font-size: 1.7em;
+  }
    .set-availability{
      font-size: larger;
    }
